# geode

./: .asf.yaml  .clang-format  .clang-tidy  .gitattributes  .gitignore  .ratignore  .travis.yml  404.html  404.md  Apache-Incubator-Proposal.mediawiki  BUILDING.md  Building-and-Running-GemFire-from-Source.md  Building-and-Running-Geode-from-Source.md  CNAME  CODEOWNERS  CODEWATCHERS  CODE_OF_CONDUCT.md  CODE_SOURCES.txt  COMMITWATCHERS  COMPILING.txt  CONTRIBUTE.md  CONTRIBUTING.md  CacheWriter-and-CacheListener-Best-Practices.md  Code-Style-Guide.md  Colocating-related-entries-across-multiple-partitioned-regions.md  Core-Distributed-System-Concepts.md  Criteria-for-Code-Submissions.md  Debugging-GemFire-Applications-(Work-in-Progress,-please-ignore-me).md  Debugging-GemFire-Applications.md  Debugging-Geode-Applications.md  Distributed-Unit-Tests.md  Function-Best-Practices.md  GEODE-10481-IMPLEMENTATION-PROPOSAL.md  Geode-Demo-Application.md  Geode-Internal-Architecture.md  Geode-Security-Framework.md  Getting-started-for-GemFire-Developers.md  Getting-started-for-Geode-Developers.md  Home.md  How-Tos.md  (+67 more)
geode-client-native/quickstart/cpp/: BasicOperations.cpp  CMakeLists.txt  CqQuery.cpp  DataExpiration.cpp  Delta.cpp  DistributedSystem.cpp  DurableClient.cpp  Exceptions.cpp  ExecuteFunctions.cpp  FindCPPCache.cmake  GNUmakefile  GNUmakefile.execs  HACache.cpp  LoaderListenerWriter.cpp  MultiuserSecurity.cpp  PdxAutoSerializer.cpp  PdxInstance.cpp  PdxRemoteQuery.cpp  PdxSerializer.cpp  PoolCqQuery.cpp  PoolRemoteQuery.cpp  PoolWithEndpoints.cpp  PutAllGetAllOperations.cpp  RefIDExample.cpp  RegisterInterest.cpp  RemoteQuery.cpp  Security.cpp  Transactions.cpp  TransactionsXA.cpp
geode-client-native/src/: BUILDING.md  CMakeLists.txt  FindNativeClient.cmake  FindNativeClientCPPCache.cmake
geode-client-native/src/bdbimpl/: BDBHelper.cpp  BDBImpl.cpp  BDBImpl.hpp  DBHelper.hpp  GNUmakefile
geode-client-native/src/cclient/: Makefile  README
geode-client-native/src/clicache/: AttributesFactoryM.cpp  AttributesFactoryM.hpp  AttributesMutatorM.cpp  AttributesMutatorM.hpp  CMakeLists.txt  CacheAttributesFactoryM.cpp  CacheAttributesFactoryM.hpp  CacheAttributesM.cpp  CacheAttributesM.hpp  CacheFactoryM.cpp  CacheFactoryM.hpp  CacheListenerAdapter.hpp  CacheM.cpp  CacheM.hpp  CacheStatisticsM.cpp  CacheStatisticsM.hpp  CacheWriterAdapter.hpp  CacheableArrayListM.hpp  CacheableBuiltinsM.hpp  CacheableDateM.cpp  CacheableDateM.hpp  CacheableFileNameM.cpp  CacheableFileNameM.hpp  CacheableHashMapM.cpp  CacheableHashMapM.hpp  CacheableHashSetM.hpp  CacheableHashTableM.hpp  CacheableIdentityHashMapM.hpp  CacheableKeyM.cpp  CacheableKeyM.hpp  CacheableObject.cpp  CacheableObject.hpp  CacheableObjectArrayM.cpp  CacheableObjectArrayM.hpp  CacheableObjectXml.cpp  CacheableObjectXml.hpp  CacheableStackM.cpp  CacheableStackM.hpp  CacheableStringArrayM.cpp  CacheableStringArrayM.hpp  (+120 more)
geode-client-native/src/cppcache/: Assert.cpp  Assert.hpp  AttributesFactory.cpp  AttributesFactory.hpp  AttributesMutator.cpp  AttributesMutator.hpp  AuthInitialize.hpp  CMakeLists.txt  Cache.cpp  Cache.hpp  CacheAttributes.cpp  CacheAttributes.hpp  CacheAttributesFactory.cpp  CacheAttributesFactory.hpp  CacheFactory.cpp  CacheFactory.hpp  CacheListener.cpp  CacheListener.hpp  CacheLoader.cpp  CacheLoader.hpp  CacheStatistics.cpp  CacheStatistics.hpp  CacheTransactionManager.cpp  CacheTransactionManager.hpp  CacheWriter.cpp  CacheWriter.hpp  Cacheable.hpp  CacheableBuiltins.cpp  CacheableBuiltins.hpp  CacheableDate.cpp  CacheableDate.hpp  CacheableEnum.cpp  CacheableEnum.hpp  CacheableFileName.cpp  CacheableFileName.hpp  CacheableKey.cpp  CacheableKey.hpp  CacheableKey.inl  CacheableKeys.hpp  CacheableObjectArray.cpp  (+140 more)
geode-client-native/src/cryptoimpl/: CMakeLists.txt  DHImpl.cpp  DHImpl.hpp  GFSsl.hpp  GNUmakefile  Makefile  SSLImpl.cpp  SSLImpl.hpp
geode-client-native/src/dependencies/: CMakeLists.txt  thirdparty.properties.in
geode-client-native/src/dhimpl/: CMakeLists.txt  DHImpl.cpp  DHImpl.hpp  GNUmakefile
geode-client-native/src/dtds/: gfcpp-cache3000.dtd  gfcpp-cache3500.dtd  gfcpp-cache3600.dtd  gfcpp-cache8000.dtd
geode-client-native/src/executables/: GNUmakefile
geode-client-native/src/gfcpp/: CMakeLists.txt  gfcpp.cpp
geode-client-native/src/pdxautoserializer/: ASBuiltins.hpp  ASCLIBuiltins.hpp  ASCPPInclude.hpp  CMakeLists.txt  CodeGenerator.hpp  CodeGeneratorFactory.cpp  CodeGeneratorFactory.hpp  Doxyfile  GNUmakefile  InputParser.cpp  InputParser.hpp  InputParserFactory.cpp  InputParserFactory.hpp  OutputFormatter.cpp  OutputFormatter.hpp  base_types.hpp
geode-client-native/src/sqliteimpl/: CMakeLists.txt  GNUmakefile  Makefile  SqLiteHelper.cpp  SqLiteHelper.hpp  SqLiteImpl.cpp  SqLiteImpl.hpp
geode-client-native/src/tests/: CMakeLists.txt
src/: BUILDING.md  CMakeLists.txt  FindNativeClient.cmake  FindNativeClientCPPCache.cmake
src/clicache/: CMakeLists.txt
src/cppcache/: CMakeLists.txt  CPPCacheConfig.cmake  FindCPPCache.cmake
src/cryptoimpl/: CMakeLists.txt  DHImpl.cpp  DHImpl.hpp  GFSsl.hpp  SSLImpl.cpp  SSLImpl.hpp
src/defaultSystem/: gfcpp.properties
src/dependencies/: CMakeLists.txt
src/dhimpl/: CMakeLists.txt  DHImpl.cpp  DHImpl.hpp
src/docs/: CMakeLists.txt  DocIndex.css  c-footer.html  common-Doxyfile  copyright.html  support.html  unix_index.html  win_index.html
src/gfcpp/: CMakeLists.txt  gfcpp.cpp
src/pdxautoserializer/: ASBuiltins.hpp  ASCLIBuiltins.hpp  ASCPPInclude.hpp  CMakeLists.txt  CodeGenerator.hpp  CodeGeneratorFactory.cpp  CodeGeneratorFactory.hpp  Doxyfile  InputParser.cpp  InputParser.hpp  InputParserFactory.cpp  InputParserFactory.hpp  OutputFormatter.cpp  OutputFormatter.hpp  base_types.hpp  base_types.hpp.new
src/quickstart/: CPPCacheConfig.cmake  NativeClientConfig.cmake  cleanup.bat  cleanup.sh  runcpp.bat.in  runcpp.sh.in  runcs.bat.in
src/sqliteimpl/: CMakeLists.txt  SqLiteHelper.cpp  SqLiteHelper.hpp  SqLiteImpl.cpp  SqLiteImpl.hpp
src/templates/: CMakeLists.txt
src/tests/: CMakeLists.txt
src/xsds/: gfcpp-cache-9.0.xsd
(+45300 files in other folders)
